tests/invalid_run/div/div03.java
class Main {
	static void run() {
		int a = 20;
		int b = 10;
		while (a < 30) {
			b = 12/a;
			a = a - 1;
		}
	}
}
